--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,107 @@
-.App {
+body {
   text-align: center;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+#root {
+  text-align: center;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #2a5dc2;
+  padding: 5px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+.App-body {
   background-color: #282c34;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  /* font-size: calc(10px + 2vmin); */
   color: white;
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 
-.App-link {
-  color: #61dafb;
+iframe {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 300%;
+  height: 300%;
+  border: 1px solid black;
+}
+iframe {
+  -ms-zoom: 0.33;
+  -moz-transform: scale(0.33);
+  -moz-transform-origin: 0 0;
+  -o-transform: scale(0.33);
+  -o-transform-origin: 0 0;
+  -webkit-transform: scale(0.33);
+  -webkit-transform-origin: 0 0;
+}
+.title {
+        z-index:9;
+        position: absolute;
+        margin: 0 30%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+
+/* 
+body,  #root {
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 0;
+  pointer-events: none
+} */
+
+.app {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  pointer-events: none
+}
+/* 
+.iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+} */
+
+/* Clear floats after the columns */
+
+
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+  pointer-events: none
+}
+
+.column {
+  float: left;
+  width: 50%;
+  background-color: #ffff0090;
+  pointer-events: none
 }
